Update blog single template

--- a/layouts/blogs/single.html
+++ b/layouts/blogs/single.html
@@ -22,7 +22,7 @@
       </div>
     {{ end -}}
   {{ end -}}
-  <div class="col-md-12 col-lg-9">
+  <div class="col-md-13">
     {{ with .Params.summary -}}<p class="lead">{{ . }}</p>{{ end -}}
     {{ if ne .Params.toc false -}}
     <nav class="my-3" aria-label="Secondary navigation">
